[metadata]
name = lightspark
version = attr: lightspark.version.__version__
description = Python SDK to access the Lightspark API
author = Lightspark Group, Inc.
author_email = info@lightspark.com
url = https://www.lightspark.com/

[options]
packages = find:
install_requires =
  cryptography
  requests

[options.packages.find]
include = lightspark*
