[metadata]
name = lightspark
url = https://www.lightspark.com/
version = attr: lightspark.version.__version__
description = Python SDK for the Lightspark API
long_description = file: README.rst
long_description_content_type = text/markdown
author = Lightspark Group, Inc.
author_email = info@lightspark.com
license = Apache-2.0
license_files = LICENSE.rst
project_urls =
  Documentation = https://app.lightspark.com/docs/api
  Source Code = https://github.com/lightsparkdev/python-sdk

[options]
packages = find:
install_requires =
  cryptography
  pyjwt
  requests
  lightspark-crypto-python

[options.packages.find]
include =
  lightspark*
