[metadata]
name = lightspark
url = https://www.lightspark.com/
version = attr: lightspark.version.__version__
description = Python SDK for the Lightspark API
long_description = file: README.md
long_description_content_type = text/markdown
author = Lightspark Group, Inc.
author_email = info@lightspark.com
license = Apache-2.0
license_files = LICENSE
project_urls =
  Documentation = https://docs.lightspark.com/lightspark-sdk/getting-started?language=Python
  Source Code = https://github.com/lightsparkdev/python-sdk

[options]
packages = find:
include_package_data = True
install_requires =
  cryptography
  pyjwt
  requests
  lightspark-crypto-python
  zstandard

[options.packages.find]
include =
  lightspark*
